--- a/retry-phonegap/www/host.html
+++ b/retry-phonegap/www/host.html
@@ -2,12 +2,18 @@
 <html>
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>다시 입력하세요</title>
 <style type="text/css">
 
 * {
 	margin: 0;
 	padding: 0;
+}
+
+html, body {
+	width: 100%;
+	height: 100%;
 }
 
 iframe {
